# SafeFeed---Meta

./: .dockerignore  .gitignore  Dockerfile  README.md  demo_script.md  inference.py  openenv.yaml  openenv_submission_notes.md  pitch_points.md  pyproject.toml  requirements.txt  start.sh
backend/: app.py  requirements.txt
backend/agents/: engagement_agent.py  safety_agent.py
backend/env/: content_pool.py  grader.py  logger.py  reward.py  safefeed_env.py  state.py  tasks.py
backend/utils/: explain.py  helpers.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: ComparisonView.jsx  Controls.jsx  FeedCard.jsx  MetricsChart.jsx  StatePanel.jsx
frontend/src/pages/: Dashboard.jsx
server/: app.py
tasks/: __init__.py
tasks/balanced_feed/: __init__.py  grader.py
tasks/high_risk_feed/: __init__.py  grader.py
tasks/low_diversity_feed/: __init__.py  grader.py
