[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "safefeed"
version = "1.0.0"
description = "SafeFeed: An OpenEnv-compatible benchmark environment for evaluating safety-aware feed ranking agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.29.0",
    "pydantic>=2.7.1",
    "openai>=1.0.0"
]

[tool.setuptools.packages.find]
include = ["backend*"]
