[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "safefeed-openenv"
version = "0.1.0"
description = "SafeFeed: An OpenEnv-compatible benchmark environment for evaluating safety-aware feed ranking agents."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[tool.setuptools.packages.find]
include = ["backend*", "server*"]
